update references for sim

--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -775,3 +775,168 @@ DOI: 10.1007/11840541_68},
   institution = {Carnegie Mellon University, Robotics Institute},
   url = {http://www.programmingvision.com/rosen_diankov_thesis.pdf}
 }
+@book{haykinNeuralNetworksLearning2009,
+  title = {Neural Networks and Learning Machines},
+  author = {Haykin, Simon S. and Haykin, Simon S.},
+  date = {2009},
+  edition = {3rd ed},
+  publisher = {Prentice Hall},
+  location = {New York},
+  isbn = {978-0-13-147139-9},
+  langid = {english},
+  pagetotal = {906},
+  keywords = {Adaptive filters,Neural networks (Computer science)},
+  annotation = {OCLC: ocn237325326}
+}
+@book{ramonycajalHistologieSystemeNerveux1909,
+  title = {Histologie Du Système Nerveux de l'homme \& Des Vertébrés},
+  author = {Ramón Y Cajal, Santiago},
+  date = {1909},
+  publisher = {Maloine},
+  location = {Paris},
+  doi = {10.5962/bhl.title.48637},
+  url = {https://www.biodiversitylibrary.org/bibliography/48637},
+  urldate = {2025-04-06}
+}
+@book{calvettiIntroductionBayesianScientific2007,
+  title = {Introduction to {{Bayesian Scientific Computing}}: {{Ten Lectures}} on {{Subjective Computing}}},
+  shorttitle = {Introduction to {{Bayesian Scientific Computing}}},
+  editor = {Calvetti, Daniela and Somersalo, Erkki},
+  date = {2007},
+  series = {Surveys and {{Tutorials}} in the {{Applied Mathematical Sciences}}},
+  number = {2},
+  publisher = {Springer Science+Business Media, LLC},
+  location = {New York, NY},
+  doi = {10.1007/978-0-387-73394-4},
+  isbn = {978-0-387-73393-7 978-0-387-73394-4},
+  langid = {english},
+  pagetotal = {202}
+}
+@article{collinsReviewPhysicsSimulators2021,
+  title = {A {{Review}} of {{Physics Simulators}} for {{Robotic Applications}}},
+  author = {Collins, Jack and Chand, Shelvin and Vanderkop, Anthony and Howard, David},
+  date = {2021},
+  journaltitle = {IEEE Access},
+  shortjournal = {IEEE Access},
+  volume = {9},
+  pages = {51416--51431},
+  issn = {2169-3536},
+  doi = {10.1109/ACCESS.2021.3068769},
+  url = {https://ieeexplore.ieee.org/document/9386154/},
+  urldate = {2023-10-18},
+  abstract = {The use of simulators in robotics research is widespread, underpinning the majority of recent advances in the field. There are now more options available to researchers than ever before, however navigating through the plethora of choices in search of the right simulator is often non-trivial. Depending on the field of research and the scenario to be simulated there will often be a range of suitable physics simulators from which it is difficult to ascertain the most relevant one. We have compiled a broad review of physics simulators for use within the major fields of robotics research. More specifically, we navigate through key sub-domains and discuss the features, benefits, applications and use-cases of the different simulators categorised by the respective research communities. Our review provides an extensive index of the leading physics simulators applicable to robotics researchers and aims to assist them in choosing the best simulator for their use case.},
+  langid = {english}
+}
+@online{aldhaheriUnderwaterRoboticSimulators2025,
+  title = {Underwater {{Robotic Simulators Review}} for {{Autonomous System Development}}},
+  author = {Aldhaheri, Sara and Hu, Yang and Xie, Yongchang and Wu, Peng and Kanoulas, Dimitrios and Liu, Yuanchang},
+  date = {2025-04-08},
+  eprint = {2504.06245},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2504.06245},
+  url = {http://arxiv.org/abs/2504.06245},
+  urldate = {2025-04-09},
+  abstract = {The increasing complexity of underwater robotic systems has led to a surge in simulation platforms designed to support perception, planning, and control tasks in marine environments. However, selecting the most appropriate underwater robotic simulator (URS) remains a challenge due to wide variations in fidelity, extensibility, and task suitability. This paper presents a comprehensive review and comparative analysis of five state-of-the-art, ROS-compatible, open-source URSs: Stonefish, DAVE, HoloOcean, MARUS, and UNav-Sim. Each simulator is evaluated across multiple criteria including sensor fidelity, environmental realism, sim-to-real capabilities, and research impact. We evaluate them across architectural design, sensor and physics modeling, task capabilities, and research impact. Additionally, we discuss ongoing challenges in sim-to-real transfer and highlight the need for standardization and benchmarking in the field. Our findings aim to guide practitioners in selecting effective simulation environments and inform future development of more robust and transferable URSs.},
+  langid = {english},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Robotics}
+}
+@article{calderon-arceSwarmRoboticsSimulators2022,
+  title = {Swarm Robotics: {{Simulators}}, Platforms and Applications Review},
+  author = {Calderón-Arce, Cindy and Brenes-Torres, Juan Carlos and Solis-Ortega, Rebeca},
+  date = {2022},
+  journaltitle = {Computation},
+  volume = {10},
+  number = {6},
+  issn = {2079-3197},
+  doi = {10.3390/computation10060080},
+  url = {https://www.mdpi.com/2079-3197/10/6/80},
+  abstract = {This paper presents an updated and broad review of swarm robotics research papers regarding software, hardware, simulators and applications. The evolution from its concept to its real-life implementation is presented. Swarm robotics analysis is focused on four aspects: conceptualization, simulators, real-life robotics for swarm use, and applications. For simulators and robots, a detailed comparison between existing resources is made. A summary of the most used swarm robotics applications and behaviors is included.}
+}
+@article{tselegkaridisSimulatorsEducationalRobotics2021,
+  title = {Simulators in {{Educational Robotics}}: {{A Review}}},
+  shorttitle = {Simulators in {{Educational Robotics}}},
+  author = {Tselegkaridis, Sokratis and Sapounidis, Theodosios},
+  date = {2021-01-01},
+  journaltitle = {Education Sciences},
+  shortjournal = {Education Sciences},
+  volume = {11},
+  number = {1},
+  pages = {11},
+  issn = {2227-7102},
+  doi = {10.3390/educsci11010011},
+  url = {https://www.mdpi.com/2227-7102/11/1/11},
+  urldate = {2023-10-18},
+  abstract = {Educational robotics (ER) seems to have a positive effect on students and, in many cases, might help them to successfully assimilate knowledge and skills. Thus, this paper focuses on ER and carries out a literature review on educational robotics simulators with Graphical User Interfaces (GUIs). The review searches for relevant papers which were published in the period 2013–2020 and extracted the characteristics of the simulators used. The simulators that we describe in this article cover various robotic technologies, offering students an easy way to engage with virtual robots and robotics mechanisms, such as wheeled robots or drones. Using these simulators, students might cover their educational needs or prepare themselves for educational robotic competitions by working in as realistic as possible conditions without hardware restrictions. In many cases, simulators might reduce the required cost to obtain a robotic system and increase availability. Focusing on educational robotics simulators, this paper presents seventeen simulators emphasizing key features such as: user’s age, robot’s type and programming language, development platform, capabilities, and scope of the simulator.},
+  langid = {english}
+}
+@article{chatzilygeroudisRobotDARTVersatileRobot2024,
+  title = {{{RobotDART}}: A Versatile Robot Simulator for Robotics and Machine Learning Researchers},
+  author = {Chatzilygeroudis, Konstantinos and Totsila, Dionis},
+  date = {2024},
+  abstract = {Robot simulation plays a pivotal role in robotics and machine learning research, offering a cost-effective and safe means to develop, validate, and benchmark algorithms in various scenarios. With the growing complexity of robotic systems and the increasing demand for data-driven approaches in machine learning, there is a pressing need for versatile and efficient robot simulators that cater to the diverse requirements of researchers. In response to this demand, we introduce RobotDART, a high-performance and versatile robot simulator designed to empower researchers in robotics and machine learning with a powerful and flexible simulation environment.},
+  langid = {english}
+}
+@article{camargoSystematicLiteratureReview2021,
+  title = {Systematic {{Literature Review}} of {{Realistic Simulators Applied}} in {{Educational Robotics Context}}},
+  author = {Camargo, Caio and Gonçalves, José and Conde, Miguel Á. and Rodríguez-Sedano, Francisco J. and Costa, Paulo and García-Peñalvo, Francisco J.},
+  date = {2021-06-11},
+  journaltitle = {Sensors},
+  shortjournal = {Sensors},
+  volume = {21},
+  number = {12},
+  pages = {4031},
+  issn = {1424-8220},
+  doi = {10.3390/s21124031},
+  url = {https://www.mdpi.com/1424-8220/21/12/4031},
+  urldate = {2025-04-09},
+  abstract = {This paper presents a systematic literature review (SLR) about realistic simulators that can be applied in an educational robotics context. These simulators must include the simulation of actuators and sensors, the ability to simulate robots and their environment. During this systematic review of the literature, 559 articles were extracted from six different databases using the Population, Intervention, Comparison, Outcomes, Context (PICOC) method. After the selection process, 50 selected articles were included in this review. Several simulators were found and their features were also analyzed. As a result of this process, four realistic simulators were applied in the review’s referred context for two main reasons. The first reason is that these simulators have high fidelity in the robots’ visual modeling due to the 3D rendering engines and the second reason is because they apply physics engines, allowing the robot’s interaction with the environment.},
+  langid = {english}
+}
+@article{liuRolePhysicsBasedSimulators2021,
+  title = {The {{Role}} of {{Physics-Based Simulators}} in {{Robotics}}},
+  author = {Liu, C. Karen and Negrut, Dan},
+  date = {2021-05-03},
+  journaltitle = {Annual Review of Control, Robotics, and Autonomous Systems},
+  shortjournal = {Annu. Rev. Control Robot. Auton. Syst.},
+  volume = {4},
+  number = {1},
+  pages = {35--58},
+  issn = {2573-5144, 2573-5144},
+  doi = {10.1146/annurev-control-072220-093055},
+  url = {https://www.annualreviews.org/doi/10.1146/annurev-control-072220-093055},
+  urldate = {2025-04-09},
+  abstract = {Physics-based simulation provides an accelerated and safe avenue for developing, verifying, and testing robotic control algorithms and prototype designs. In the quest to leverage machine learning for developing AI-enabled robots, physics-based simulation can generate a wealth of labeled training data in a short amount of time. Physics-based simulation also creates an ideal proving ground for developing intelligent robots that can both learn from their mistakes and be verifiable. This article provides an overview of the use of simulation in robotics, emphasizing how robots (with sensing and actuation components), the environment they operate in, and the humans they interact with are simulated in practice. It concludes with an overview of existing tools for simulation in robotics and a short discussion of aspects that limit the role that simulation plays today in intelligent robot design.},
+  langid = {english}
+}
+@article{choiUseSimulationRobotics2021,
+  title = {On the Use of Simulation in Robotics: {{Opportunities}}, Challenges, and Suggestions for Moving Forward},
+  shorttitle = {On the Use of Simulation in Robotics},
+  author = {Choi, HeeSun and Crump, Cindy and Duriez, Christian and Elmquist, Asher and Hager, Gregory and Han, David and Hearl, Frank and Hodgins, Jessica and Jain, Abhinandan and Leve, Frederick and Li, Chen and Meier, Franziska and Negrut, Dan and Righetti, Ludovic and Rodriguez, Alberto and Tan, Jie and Trinkle, Jeff},
+  date = {2021-01-05},
+  journaltitle = {Proceedings of the National Academy of Sciences},
+  shortjournal = {Proc. Natl. Acad. Sci. U.S.A.},
+  volume = {118},
+  number = {1},
+  pages = {e1907856118},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1907856118},
+  url = {https://pnas.org/doi/full/10.1073/pnas.1907856118},
+  urldate = {2025-04-09},
+  abstract = {The last five years marked a surge in interest for and use of smart robots, which operate in dynamic and unstructured environments and might interact with humans. We posit that well-validated computer simulation can provide a virtual proving ground that in many cases is instrumental in understanding safely, faster, at lower costs, and more thoroughly how the robots of the future should be designed and controlled for safe operation and improved performance. Against this backdrop, we discuss how simulation can help in robotics, barriers that currently prevent its broad adoption, and potential steps that can eliminate some of these barriers. The points and recommendations made concern the following simulation-in-robotics aspects: simulation of the dynamics of the robot; simulation of the virtual world; simulation of the sensing of this virtual world; simulation of the interaction between the human and the robot; and, in less depth, simulation of the communication between robots. This Perspectives contribution summarizes the points of view that coalesced during a 2018 National Science Foundation/Department of Defense/National Institute for Standards and Technology workshop dedicated to the topic at hand. The meeting brought together participants from a range of organizations, disciplines, and application fields, with expertise at the intersection of robotics, machine learning, and physics-based simulation.},
+  langid = {english}
+}
+@article{reckhausOverviewSimulationEmulation2010,
+  title = {An {{Overview}} about {{Simulation}} and {{Emulation}} in {{Robotics}}},
+  author = {Reckhaus, Michael and Hochgeschwender, Nico and Paulus, Jan and Kraetzschmar, Gerhard K},
+  date = {2010},
+  abstract = {Simulation is well established in robotics and nearly every robot project benefits from it. Thereby the understanding on what insights a simulation shall bring or how it shall assist the development is totally different in every project. The main reason is that simulation covers all aspects in the robot development process as for example learning and tuning control parameters or testing the composition of algorithms in a robot architecture. Further, the broad application field led to a large number of different simulation environments where, depending on the application, some are designed to simulate special purpose hardware and others aim to target a wide range of robotic systems. In this paper we present an overview on different use cases for simulation in robotics. Dependent on the use cases we propose a categorization for robot simulators/emulators and present some concrete environments.},
+  langid = {english}
+}
+@inproceedings{Teixeira2015EducationalRS,
+  title = {Educational Robotic Simulators: A Systematic Literature Review},
+  author = {Teixeira, J. V. and family=Silva Hounsell, given=Marcelo, prefix=da, useprefix=true},
+  date = {2015},
+  url = {https://api.semanticscholar.org/CorpusID:113610382}
+}
