add better tooltips to cites

--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -940,3 +940,23 @@ DOI: 10.1007/11840541_68},
   date = {2015},
   url = {https://api.semanticscholar.org/CorpusID:113610382}
 }
+@book{tanenbaumComputerNetworks2021,
+  title = {Computer Networks},
+  author = {Tanenbaum, Andrew S. and Feamster, Nickolas and Wetherall, D.},
+  date = {2021},
+  edition = {Sixth edition. [Rental edition]},
+  publisher = {Pearson},
+  location = {Upper Saddle River},
+  isbn = {978-0-13-676405-2},
+  langid = {english},
+  annotation = {OCLC: 1085945855}
+}
+@thesis{brendanw.sullivanEverythingYouAlways2013,
+  type = {phdthesis},
+  title = {Everything {{You Always Wanted To Know About Mathematics}}},
+  author = {{Brendan W. Sullivan} and {Professor John Mackey}},
+  date = {2013-05-10},
+  institution = {Carnegie Mellon University Pittsburgh, PA},
+  url = {https://www.math.cmu.edu/users/jmackey/summer/bws_book.pdf},
+  langid = {english}
+}
