--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -960,3 +960,159 @@ DOI: 10.1007/11840541_68},
   url = {https://www.math.cmu.edu/users/jmackey/summer/bws_book.pdf},
   langid = {english}
 }
+@book{jacodProbabilityEssentials2004,
+  title = {Probability {{Essentials}}},
+  author = {Jacod, Jean and Protter, Philip},
+  date = {2004},
+  series = {Universitext},
+  publisher = {Springer Berlin Heidelberg},
+  location = {Berlin, Heidelberg},
+  doi = {10.1007/978-3-642-55682-1},
+  url = {http://link.springer.com/10.1007/978-3-642-55682-1},
+  urldate = {2023-10-15},
+  isbn = {978-3-540-43871-7 978-3-642-55682-1},
+  langid = {english}
+}
+@book{grinsteadGrinsteadSnellsIntroduction2009,
+  title = {Grinstead and {{Snell}}'s {{Introduction}} to {{Probability}}},
+  author = {Grinstead, Charles M},
+  date = {2009},
+  publisher = {Orange Grove Texts Plus},
+  isbn = {978-1-61610-046-9},
+  langid = {english},
+  annotation = {OCLC: 1468177993}
+}
+@book{jaynesProbabilityTheoryLogic2003,
+  title = {Probability Theory: The Logic of Science},
+  shorttitle = {Probability Theory},
+  author = {Jaynes, E. T.},
+  editor = {Bretthorst, G. Larry},
+  date = {2003},
+  publisher = {Cambridge University Press},
+  location = {Cambridge, UK},
+  abstract = {A comprehensive introduction to the role of probability theory in general scientific endeavour. This book provides an original interpretation of probability theory, showing the subject to be an extension of logic, and presenting new results and applications. Ideal for scientists working in any area involving inference from incomplete information},
+  isbn = {978-0-511-06589-7},
+  langid = {english},
+  annotation = {OCLC: 57254076}
+}
+@book{rasmussenGaussianProcessesMachine2008,
+  title = {Gaussian Processes for Machine Learning},
+  author = {Rasmussen, Carl Edward and Williams, Christopher K. I.},
+  date = {2008},
+  series = {Adaptive Computation and Machine Learning},
+  edition = {3. print},
+  publisher = {MIT Press},
+  location = {Cambridge, Mass.},
+  isbn = {978-0-262-18253-9},
+  langid = {english},
+  pagetotal = {248}
+}
+@book{walpoleProbabilityStatisticsEngineers2017,
+  title = {Probability \& Statistics for Engineers \& Scientists: {{MyStatLab}} Update},
+  shorttitle = {Probability \& Statistics for Engineers \& Scientists},
+  author = {Walpole, Ronald E. and Myers, Raymond H. and Myers, Sharon L. and Ye, Keying},
+  date = {2017},
+  edition = {Ninth edition},
+  publisher = {Pearson},
+  location = {Boston},
+  isbn = {978-1-292-16141-9},
+  langid = {english},
+  annotation = {OCLC: 1014366070}
+}
+@book{deisenrothMathematicsMachineLearning,
+  title = {Mathematics for {{Machine Learning}}},
+  author = {Deisenroth, Marc Peter and Faisal, A Aldo and Ong, Cheng Soon},
+  langid = {english},
+  pagetotal = {412}
+}
+@book{bishopPatternRecognitionMachine2006,
+  title = {Pattern Recognition and Machine Learning},
+  author = {Bishop, Christopher M.},
+  date = {2006},
+  series = {Information Science and Statistics},
+  publisher = {Springer},
+  location = {New York},
+  isbn = {978-0-387-31073-2},
+  langid = {english}
+}
+@book{bishopDeepLearningFoundations2024,
+  title = {Deep {{Learning}}: {{Foundations}} and {{Concepts}}},
+  shorttitle = {Deep {{Learning}}},
+  author = {Bishop, Christopher M. and Bishop, Hugh},
+  date = {2024},
+  publisher = {Springer International Publishing},
+  location = {Cham},
+  doi = {10.1007/978-3-031-45468-4},
+  url = {https://link.springer.com/10.1007/978-3-031-45468-4},
+  urldate = {2023-12-18},
+  isbn = {978-3-031-45467-7 978-3-031-45468-4},
+  langid = {english}
+}
+@book{goodfellowDeepLearning2016,
+  title = {Deep Learning},
+  author = {Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron},
+  date = {2016},
+  series = {Adaptive Computation and Machine Learning},
+  publisher = {The MIT Press},
+  location = {Cambridge, Massachusetts},
+  isbn = {978-0-262-03561-3},
+  pagetotal = {775},
+  keywords = {Machine learning}
+}
+@book{kolmogoroffGrundbegriffeWahrscheinlichkeitsrechnung1933,
+  title = {Grundbegriffe der Wahrscheinlichkeitsrechnung},
+  author = {Kolmogoroff, A.},
+  date = {1933},
+  publisher = {Springer Berlin Heidelberg},
+  location = {Berlin, Heidelberg},
+  doi = {10.1007/978-3-642-49888-6},
+  url = {http://link.springer.com/10.1007/978-3-642-49888-6},
+  urldate = {2025-04-21},
+  isbn = {978-3-642-49596-0 978-3-642-49888-6},
+  langid = {ngerman}
+}
+@book{kolmogorovFoundationsTheoryProbability1960,
+  title = {Foundations of the {{Theory}} of {{Probability}} ({{Translation}})},
+  author = {Kolmogorov, A.},
+  date = {1960},
+  edition = {2},
+  publisher = {Chelsea Publishing Co.},
+  location = {New York},
+  langid = {english}
+}
+@book{stiglerHistoryStatisticsMeasurement1986,
+  title = {The History of Statistics: The Measurement of Uncertainty before 1900},
+  shorttitle = {The History of Statistics},
+  author = {Stigler, Stephen M.},
+  date = {1986},
+  publisher = {Belknap Press of Harvard University Press},
+  location = {Cambridge, Mass},
+  isbn = {978-0-674-40340-6},
+  langid = {english},
+  pagetotal = {410},
+  keywords = {History,Statistics}
+}
+@book{taoIntroductionMeasureTheory2011,
+  title = {An Introduction to Measure Theory},
+  author = {Tao, Terence},
+  date = {2011},
+  series = {Graduate {{Studies}} in {{Mathematics}}},
+  number = {126},
+  publisher = {American Mathematical Society},
+  location = {Providence, Rhode Island},
+  isbn = {978-1-4704-6640-4 978-1-4704-1187-9},
+  langid = {english},
+  pagetotal = {1}
+}
+@book{durrettProbabilityTheoryExamples2019,
+  title = {Probability: {{Theory}} and {{Examples}}},
+  shorttitle = {Probability},
+  author = {Durrett, Rick},
+  date = {2019-04-18},
+  edition = {5},
+  publisher = {Cambridge University Press},
+  doi = {10.1017/9781108591034, Public version: https://services.math.duke.edu/~rtd/PTE/pte.html},
+  url = {https://www.cambridge.org/core/product/identifier/9781108591034/type/book},
+  urldate = {2025-04-21},
+  isbn = {978-1-108-59103-4 978-1-108-47368-2}
+}
